2002-11-29  Steve Osborn  <bub@io.com>

	* fhandler_tty.cc (fhandler_pty_master::accept_input): Move
	read_retval assignment to prevent race condition.  Remove read_retval
	from return statement.

2002-11-29  Christopher Faylor  <cgf@redhat.com>

	* pinfo.h (winpids::set): Renamed from init.
	(winpids::init): New declaration.
	(winpids::cs): Ditto.
	(winpids::winpids): Use set rather than init.
	* external.cc (fillout_pinfo): Ditto.
	* dcrt0.cc (dll_crt0_1): Call winpids::init.
	* pinfo.cc (winpids::set): Renamed from init.  Wrap calls in critical
	section.
	(winpids::init): New function.
	(winpids::cs): Define.

2002-11-28  Christopher Faylor  <cgf@redhat.com>

	* sigproc.cc (sig_dispatch_pending): Remove assertion.

2002-11-27  Christopher Faylor  <cgf@redhat.com>

	* include/cygwin/version.h: Bump DLL minor number.

2002-11-27  Mikael Ylikoski  <my@post.utfors.se>

	* fhandler_socket.cc (fhandler_socket::sendto): Fix potential
	unitialized value return.

2002-11-27  Christopher Faylor  <cgf@redhat.com>

	* cygwin.din: Export pthread_getsequence_np.
	* include/cygwin/version.h: Bump API minor version.

2002-11-26  Jason Tishler  <jason@tishler.net>

	* cygwin.din: Export nl_langinfo().
	* include/cygwin/version.h: Bump API minor version.

2002-11-26  Christopher Faylor  <cgf@redhat.com>

	* fhandler_tty.cc (fhandler_pty_master::accept_input): Just use a
	normal Sleep or suffer amazing pauses when other tty apps are running.
	(fhandler_pty_master::process_slave_output): Ditto.

2002-11-25  Pierre Humblet <pierre.humblet@ieee.org>

	* passwd.cc (read_etc_passwd): Never add an entry when starting
	on Win95/98/ME if a default entry is present.
	* uinfo.cc (internal_getlogin): Look for the default uid if needed.
	Always call user.set_name ().

2002-11-25  Corinna Vinschen  <corinna@vinschen.de>

	* sec_acl.cc (getacl): Set errno to ENOSPC if command is GETACL and
	nentries is less than the number of entries in the file's ACL.
